# Spotilytics

./: .gitignore  .pre-commit-config.yaml  README.md  celerybeat-schedule.db  dump.rdb  manage.py  pyproject.toml  requirements.txt  start.sh
Spotilytics/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  wsgi.py
api/: views.py
music/: SpotifyClient.py  admin.py  graphs.py  models.py  spotify_api.py  tasks.py  urls.py  utils.py  views.py
music/api/: urls.py
music/migrations/: 0001_initial.py  0002_alter_playedtrack_played_at_and_more.py  0002_spotifyuser_alter_playedtrack_user.py  0003_alter_spotifyuser_display_name_and_more.py  0004_remove_spotifyuser_id_and_more.py  0005_alter_playedtrack_unique_together.py  0006_alter_playedtrack_unique_together.py  0007_playedtrack_duration_ms.py  0008_playedtrack_genres_playedtrack_popularity.py  0009_playedtrack_album_id_playedtrack_artist_id.py
music/services/: SpotifyClient.py  graphs.py  openai_service.py  spotify_data_helpers.py  tasks.py
music/static/css/: album.css  artist.css  artist_tracks.css  chat.css  home.css  search_results.css  track.css
music/utils/: db_utils.py
music/views/: __init__.py  album.py  album_stats.py  api.py  artist.py  artist_stats.py  chat.py  genre.py  genre_stats.py  history.py  home.py  item_stats.py  new_releases.py  search.py  track.py  track_stats.py
spotify/: admin.py  models.py  urls.py  util.py  views.py
spotify/migrations/: 0001_initial.py  0002_spotifytoken_spotify_user_id.py  0003_alter_spotifytoken_access_token_and_more.py  0004_remove_spotifytoken_spotify_user_id_and_more.py
static/css/: base.css  black-dashboard.css  bootstrap.min.css  nucleo-icons.css  spotify-theme.css  theme-switcher.css
static/js/: base.js  theme-switch.js
templates/: base.html  navigation.html  scripts.html  sidebar.html
(+61 files in other folders)
