[tool.poetry]
name = "spotilytics"
version = "0.1.0"
description = "A Django application for Spotify analytics"
authors = ["Edbo849 <edborthwick84@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "Spotilytics" },
    { include = "music" },
    { include = "spotify" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.1" 
djangorestframework = "^3.14.0"
requests = "^2.31.0"
python-decouple = "^3.8"
pytz = "^2023.3"
redis = "^5.0.1"
django-redis = "^5.4.0"
pandas = "^2.1.1"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
aiohttp = "^3.8.6"
celery = "^5.3.4"
certifi = "^2023.7.22"
openai = "^1.3.5"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
isort = "^5.13.2"
ruff = "^0.2.1"
pre-commit = "*"

[tool.ruff]
ignore = ["F403", "F405", "F401"] 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"